@@ -1,6 +1,5 @@
 package com.example.springAiConversational.service;
 
-import java.sql.ClientInfoStatus;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -22,31 +21,39 @@ public class ConversationalContextServiceImplemetation implements Conversational
 
     @Override
     public String preparePromptWithContextHistory(String contextId, String message) {
-        List<String> history = contextStore.get(contextId);
-        if (history == null) {
-            history = new ArrayList<>();
+        if (!contextStore.containsKey(contextId)) {
+        List<String> history = new ArrayList<>();
+
+            history.add(message);
             contextStore.put(contextId, history);
+            return message;
         }
-        // Add current message to history
-        history.add(message);
+       else{
+           List<String> history=contextStore.get(contextId);
+           history.add(message);
+           contextStore.put(contextId,history);
+        }
 
         StringBuilder prompt = new StringBuilder();
-        prompt.append(PromptConstants.PROMPT_WHAT_WERE_WE_TALKING_ABOUT);
+       List<String> history=contextStore.get(contextId);
+
+
+       prompt.append(PromptConstants.PROMPT_WHAT_WERE_WE_TALKING_ABOUT);
 
         for (int i = 0; i < history.size() - 1; i++) {
-            prompt.append(padStringWithDelimeter(history.get(i)));
+            prompt.append(padStringWithDelimiter(history.get(i)));
         }
 
         prompt.append(PromptConstants.PROMPT_DELIMITER_FOR_HISTORICAL_CONTEXT);
         prompt.append(PromptConstants.PROMPT_USE_CONTEXT_IF_NEEDED);
         prompt.append(PromptConstants.PROMPT_THE_CURRENT_QUESTION);
-        prompt.append(history.get(history.size() - 1));
+        prompt.append(history.getLast());
 
         return prompt.toString();  // return the constructed prompt string
     }
 
 
-    private String padStringWithDelimeter(String s) {
+    private String padStringWithDelimiter(String s) {
         return PromptConstants.PROMPT_DELIMITER+s+PromptConstants.PROMPT_DELIMITER;
     }
 }
